--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,7 @@
   align-self: flex-start;
   max-width: 1280px;
   margin: 0 auto;
-  padding: 2rem;
+  padding: 1rem 0rem 1rem 0rem;
   text-align: center;
   --piece-visibility: visible;
 }
@@ -20,6 +20,11 @@
   height: 2rem;
 }
 
+.controls {
+  display: flex;
+  flex-direction: column;
+}
+
 .control {
   display: flex;
   flex-direction: row;
@@ -30,4 +35,8 @@
 .tagline {
   width: 70vw;
   font-style: italic;
+}
+
+.instructions {
+  padding: 1rem;
 }
