--- a/src/App.css
+++ b/src/App.css
@@ -1,14 +1,17 @@
 #root {
   align-self: flex-start;
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 1rem 0rem 1rem 0rem;
+  /* max-width: 1280px; */
+  padding: 1rem;
   text-align: center;
   --piece-visibility: visible;
 }
 
 [data-boardid="chessboard"] svg {
   visibility: var(--piece-visibility);
+}
+
+[data-square] > div > div {
+  transition: font-size 0.15s;
 }
 
 .header {
@@ -33,7 +36,6 @@
 }
 
 .tagline {
-  width: 70vw;
   font-style: italic;
 }
 
@@ -42,13 +44,19 @@
 }
 
 .history-modal {
-  left: 50%;
-  top: 50%;
-  transform: translate(-50%, -48%);
+  left: 1rem;
+  top: 1rem;
+  padding: 1rem;
+  /* transform: translate(-50%, -48%); */
   z-index: 100;
   border: 1px solid black;
   background-color: white;
   height: 95vh;
   width: 95vw;
   position: absolute;
+}
+
+.history-modal-close {
+  float: left;
+  /* margin: 1rem; */
 }
