--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,13 @@
   padding: 1rem;
   text-align: center;
   --piece-visibility: visible;
+  --notation-font-size: 2rem;
+}
+
+.contents {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 [data-boardid="chessboard"] svg {
@@ -12,6 +19,7 @@
 
 [data-square] > div > div {
   transition: font-size 0.15s;
+  font-size: var(--notation-font-size) !important;
 }
 
 .header {
@@ -19,8 +27,13 @@
   flex-direction: row;
 }
 
+.font-button {
+  align-self: flex-start;
+  margin-top: 1rem;
+}
+
 .puzzle-title {
-  height: 2rem;
+  font-size: 2rem;
 }
 
 .controls {
@@ -43,20 +56,6 @@
   padding: 1rem;
 }
 
-.history-modal {
-  left: 1rem;
-  top: 1rem;
-  padding: 1rem;
-  /* transform: translate(-50%, -48%); */
-  z-index: 100;
-  border: 1px solid black;
-  background-color: white;
-  height: 95vh;
+[role="dialog"] {
   width: 95vw;
-  position: absolute;
-}
-
-.history-modal-close {
-  float: left;
-  /* margin: 1rem; */
 }
