--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 #root {
   align-self: flex-start;
   /* max-width: 1280px; */
-  padding: 1rem;
+  /* padding: 1rem; */
   text-align: center;
   --piece-visibility: visible;
   --notation-font-size: 2rem;
@@ -11,6 +11,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  margin-top: 1rem;
 }
 
 [data-boardid="chessboard"] svg {
@@ -25,6 +26,11 @@
 .header {
   display: flex;
   flex-direction: row;
+}
+
+.options-button {
+  float: right;
+  margin-right: 0.5rem;
 }
 
 .font-button {
